force-app/main/default/objects/Account/fields/AOV_Band__c.field-meta.xml
<CustomField>
    <fullName>AOV_Band__c</fullName>
    <label>AOV Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 50k</fullName>
            </value>
            <value>
                <fullName>50 - 100k</fullName>
            </value>
            <value>
                <fullName>100k - 250k</fullName>
            </value>
            <value>
                <fullName>250k+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>