force-app/main/default/objects/Account/fields/Total_Closed__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed__c</fullName>
    <label>Total Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>